<resources>
    <string name="app_name">Fast Transfer</string>
    <string name="author">by Pierre Kuhn</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_splash">Splash</string>
    <string name="contact_selected">Contact selected</string>
    <string name="no_contact_selected">You must select a contact</string>
    <string name="empty_fields">"Fields are empty"</string>
    <string name="calculate">CALCULATE</string>
    <string name="send">SEND</string>
    <string name="another_transfer">new transfer</string>
    <string name="send_title">You send</string>
    <string name="receive_title">Recipient Receive</string>
    <string name="network_error">Network error</string>
    <string name="transaction_error">Error during the transaction</string>
    <string name="amount_hint">enter amount</string>
    <string name="money_sent">Money Sent!</string>
    <string name="wait_progress">Please wait</string>

</resources>
